# zygra

./: README.md
zk-prover-rs/: .gitignore  Cargo.toml
zk-prover-rs/src/: lib.rs  main.rs
zk-prover-rs/src/api/: generate_proof.rs  mod.rs  types.rs
zk-prover-rs/src/circuits/: docs.md
zk-prover-rs/src/cli/: docs.md
zk-prover-rs/src/common/: docs.md
zk-prover-rs/src/fetcher/: docs.md  fetcher.rs  mod.rs  sepolia_fetcher.rs  types.rs
zk-prover-rs/src/prover/: docs.md
