[package]
name = "zk-prover-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.4"
alloy-eips = "1.0.4"
dotenv = "0.15.0"
tracing-subscriber = "0.3.19"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"